<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextCoffeeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_do_caf"
        android:autofillHints="Nome do café" />

    <EditText
        android:id="@+id/editTextCoffeeDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descri_o"
        android:layout_below="@id/editTextCoffeeName"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/buttonSaveCoffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:layout_below="@id/editTextCoffeeDescription"
        android:layout_marginTop="20dp"/>

</RelativeLayout>
