<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".CoffeeEditActivity">

    <EditText
        android:id="@+id/edit_coffee_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_do_caf"
        android:inputType="textCapWords"
        android:padding="8dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/edit_coffee_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descri_o"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:layout_marginTop="8dp"/>

</LinearLayout>
