<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/text_view_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/button_delete"
        android:contentDescription="@string/delete"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/icon_delete"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:scaleType="centerInside"/>

    <ImageButton
        android:id="@+id/button_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_edit"
        android:contentDescription="@string/edit"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:layout_marginStart="8dp"/>

    <ImageButton
        android:id="@+id/button_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_share"
        android:contentDescription="@string/share_coffee"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:layout_marginStart="8dp"/>


</LinearLayout>
